# tenkinoko

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-drafter.yml
apps/tradingd/: Cargo.toml
apps/tradingd/src/: main.rs
crates/backtest-engine/: Cargo.toml
crates/backtest-engine/src/: lib.rs
crates/config-core/: Cargo.toml
crates/config-core/src/: lib.rs
crates/domain-core/: Cargo.toml
crates/domain-core/src/: lib.rs
crates/execution-engine/: Cargo.toml
crates/execution-engine/src/: lib.rs
crates/llm-core/: Cargo.toml
crates/llm-core/src/: lib.rs
crates/polymarket-adapter/: Cargo.toml
crates/polymarket-adapter/src/: lib.rs
crates/posterior-models/: Cargo.toml
crates/posterior-models/src/: lib.rs
crates/risk-engine/: Cargo.toml
crates/risk-engine/src/: lib.rs
crates/scheduler-core/: Cargo.toml
crates/scheduler-core/src/: lib.rs
crates/signal-engine/: Cargo.toml
crates/signal-engine/src/: lib.rs
crates/storage-rocksdb/: Cargo.toml
crates/storage-rocksdb/src/: lib.rs
crates/telegram-bot/: Cargo.toml
crates/telegram-bot/src/: lib.rs
crates/telemetry-core/: Cargo.toml
crates/telemetry-core/src/: lib.rs
crates/weather-adapter-noaa/: Cargo.toml
crates/weather-adapter-noaa/src/: lib.rs
crates/weather-adapter-openmeteo/: Cargo.toml
crates/weather-adapter-openmeteo/src/: lib.rs
