[package]
name = "backtest-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
domain-core = { path = "../domain-core" }
posterior-models = { path = "../posterior-models" }
signal-engine = { path = "../signal-engine" }
storage-rocksdb = { path = "../storage-rocksdb" }
uuid.workspace = true
