[package]
name = "execution-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
config-core = { path = "../config-core" }
domain-core = { path = "../domain-core" }
futures-util.workspace = true
polymarket-client-sdk.workspace = true
storage-rocksdb = { path = "../storage-rocksdb" }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
