[package]
name = "llm-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
domain-core = { path = "../domain-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
