[package]
name = "polymarket-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
domain-core = { path = "../domain-core" }
futures-util.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
polymarket-client-sdk.workspace = true
storage-rocksdb = { path = "../storage-rocksdb" }
tokio.workspace = true
tracing.workspace = true
