[package]
name = "storage-rocksdb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
domain-core = { path = "../domain-core" }
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
